--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@main
 
+      - name: Setup Node.js
+          uses: actions/setup-node@v2  #安装node.js
+          with:
+            node-version: '16'
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world$$$$!
