--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/weijinsun/forclash/issues"
   },
-  "homepage": "https://github.com/weijinsun/forclash#readme"
+  "homepage": "https://github.com/weijinsun/forclash#readme",
+  "dependencies": {
+    "axios": "^0.27.2"
+  }
 }
