--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,19 +31,7 @@ jobs:
           echo ----
           pwd
           ls -la
-          cd ..
-          echo ----
-          pwd
-          ls -la
-          cd ..
-          echo ----
-          pwd
-          ls -la
-          cd _actions
-          echo ----
-          pwd
-          ls -la
-          cd weijinsun/forclash
+          cd ../../_actions/weijinsun/forclash/main
           echo ----
           pwd
           ls -la
