--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          git --version
-          echo ----
-          pwd
           ls -la
-          cd ../../_actions/weijinsun/forclash/main
-          echo ----
-          pwd
+          echo '-----------'
+          cd /home/runner/work/_actions/weijinsun/forclash/main
           ls -la
