--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches: [ "main" ]
   schedule:
-    - cron: '0 0/2 * * *'
+    - cron: '0/2 * * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -22,6 +22,18 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: Clone repository
+        uses: actions/checkout@v3
+
+      - name: Auto green
+        # git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+        run: |
+          git config --local user.email "weijinsun@gmail.com"
+          git config --local user.name "svj"
+          git remote set-url origin https://github.com/weijinsun/forclash.git
+          git pull --rebase
+          git commit --allow-empty -m ""
+          git push
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: weijinsun/forclash@main
       # Runs a single command using the runners shell
@@ -29,9 +41,6 @@ jobs:
         run: |
           ls -la
           echo '-----------'
-          cd /home/runner/work/_actions/weijinsun/forclash
+          cd /home/runner/work/_actions/weijinsun/forclash/main
           ls -la
           cd ..
-          git add .
-          git commit -m '--'
-          git push
