--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 #  push:
 #    branches: [ "main" ]
   schedule:
-    - cron: '0/2 * * * *'
+    - cron: '*/2 * * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
