--- a/stash.yaml
+++ b/stash.yaml
@@ -211,14 +211,14 @@ dns:
 
 proxy-providers:
   mojie-p:
-    type: file
+    type: HTTP
     url: https://mojie.link/api/v1/client/subscribe?token=c12da864507d67f00aa9532f9eae159e
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
       interval: 600
   AmyTelecom-p:
-    type: file
+    type: HTTP
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
     path: ./node/AmyTelecom.yaml
     health-check:
