--- a/stash.yaml
+++ b/stash.yaml
@@ -212,6 +212,7 @@ dns:
 proxy-providers:
   mojie-p:
     type: HTTP
+    path: ./proxy/mojie.yaml
     url: https://mojie.link/api/v1/client/subscribe?token=c12da864507d67f00aa9532f9eae159e
     health-check:
       enable: true
@@ -220,7 +221,7 @@ proxy-providers:
   AmyTelecom-p:
     type: HTTP
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
-    path: ./node/AmyTelecom.yaml
+    path: ./proxy/AmyTelecom.yaml
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
