--- a/stash.yaml
+++ b/stash.yaml
@@ -212,14 +212,16 @@ dns:
 proxy-providers:
   mojie-p:
     type: HTTP
-    path: ./proxy/mojie.yaml
+    interval: 600
     url: https://mojie.link/api/v1/client/subscribe?token=c12da864507d67f00aa9532f9eae159e
+    path: ./proxy/mojie.yaml
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
       interval: 600
   AmyTelecom-p:
     type: HTTP
+    interval: 600
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
     path: ./proxy/AmyTelecom.yaml
     health-check:
