--- a/stash.yaml
+++ b/stash.yaml
@@ -210,11 +210,10 @@ dns:
 
 
 proxy-providers:
-  mojie-p:
+  mojie-all:
     type: HTTP
     interval: 600
-    url: https://mojie.link/api/v1/client/subscribe?token=c12da864507d67f00aa9532f9eae159e
-    path: ./proxy/mojie.yaml
+    url: https://mojie.nl/api/v1/client/subscribe?token=c12da864507d67f00aa9532f9eae159e
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
@@ -223,7 +222,7 @@ proxy-providers:
     type: HTTP
     interval: 600
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
-    path: ./proxy/AmyTelecom.yaml
+    filter: HK|US
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
@@ -241,8 +240,8 @@ proxy-groups:
   - name: "Proxy"
     type: select
     proxies:
-      - mojie
       - AmyTelecom
+      - mojie
   - name: "Apple"
     type: select
     proxies:
@@ -253,13 +252,12 @@ proxy-groups:
     proxies:
       - DIRECT
       - Proxy
-  - name: 'load-balance'
-    type: load-balance
-    proxies:
-      - Proxy
-      - DIRECT
-    url: 'http://www.gstatic.com/generate_204'
-    interval: 300
+#  - name: 'load-balance'
+#    type: load-balance
+#    proxies:
+#      - Proxy
+#    url: 'http://www.gstatic.com/generate_204'
+#    interval: 300
 
   # 基于 SSID 的策略，方便在特殊网络环境下使用特定的代理
 #  - name: ssid-group
