--- a/stash.yaml
+++ b/stash.yaml
@@ -210,7 +210,15 @@ dns:
 
 
 proxy-providers:
-  AmyTelecom-p:
+  AmyTelecom-ALL:
+    type: HTTP
+    interval: 600
+    url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
+    health-check:
+      enable: true
+      url: http://www.gstatic.com/generate_204
+      interval: 600
+  AmyTelecom-HK:
     type: HTTP
     interval: 600
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
@@ -219,12 +227,57 @@ proxy-providers:
       enable: true
       url: http://www.gstatic.com/generate_204
       interval: 600
+  AmyTelecom-JP:
+    type: HTTP
+    interval: 600
+    url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
+    filter: '日本'
+    health-check:
+      enable: true
+      url: http://www.gstatic.com/generate_204
+      interval: 600
+  AmyTelecom-US:
+    type: HTTP
+    interval: 600
+    url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
+    filter: '美国'
+    health-check:
+      enable: true
+      url: http://www.gstatic.com/generate_204
+      interval: 600
+  AmyTelecom-TW:
+    type: HTTP
+    interval: 600
+    url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
+    filter: '台湾'
+    health-check:
+      enable: true
+      url: http://www.gstatic.com/generate_204
+      interval: 600
+  AmyTelecom-SG:
+    type: HTTP
+    interval: 600
+    url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
+    filter: '新加坡'
+    health-check:
+      enable: true
+      url: http://www.gstatic.com/generate_204
+      interval: 600
 
 proxy-groups:
+  - name: "HK"
+      type: select
+      use:
+        - AmyTelecom-HK
+  - name: "AmyTelecom"
+      type: select
+      use:
+        - AmyTelecom-ALL
   - name: "Proxy"
     type: select
-    use:
-      - AmyTelecom-p
+    proxies:
+      - HK
+      - AmyTelecom
   - name: "Apple"
     type: select
     proxies:
