--- a/stash.yaml
+++ b/stash.yaml
@@ -213,7 +213,7 @@ proxy-providers:
   AmyTelecom-ALL:
     type: HTTP
     interval: 600
-    path:
+    path: ./AmyTelecom.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
     health-check:
       enable: true
@@ -222,7 +222,7 @@ proxy-providers:
   AmyTelecom-HK:
     type: HTTP
     interval: 600
-    path:
+    path: ./AmyTelecom.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
     filter: '香港'
     health-check:
@@ -232,7 +232,7 @@ proxy-providers:
   AmyTelecom-JP:
     type: HTTP
     interval: 600
-    path:
+    path: ./AmyTelecom.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
     filter: '日本'
     health-check:
@@ -242,7 +242,7 @@ proxy-providers:
   AmyTelecom-US:
     type: HTTP
     interval: 600
-    path:
+    path: ./AmyTelecom.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
     filter: '美国'
     health-check:
@@ -252,7 +252,7 @@ proxy-providers:
   AmyTelecom-TW:
     type: HTTP
     interval: 600
-    path:
+    path: ./AmyTelecom.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
     filter: '台湾'
     health-check:
@@ -262,7 +262,7 @@ proxy-providers:
   AmyTelecom-SG:
     type: HTTP
     interval: 600
-    path:
+    path: ./AmyTelecom.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
     filter: '新加坡'
     health-check:
