--- a/stash.yaml
+++ b/stash.yaml
@@ -211,7 +211,7 @@ dns:
 
 proxy-providers:
   AmyTelecom-ALL:
-    type: HTTP
+    type: http
     interval: 600
     path: ./AmyTelecom.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
@@ -220,7 +220,7 @@ proxy-providers:
       url: http://www.gstatic.com/generate_204
       interval: 600
   AmyTelecom-HK:
-    type: HTTP
+    type: http
     interval: 600
     path: ./AmyTelecom.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
@@ -230,7 +230,7 @@ proxy-providers:
       url: http://www.gstatic.com/generate_204
       interval: 600
   AmyTelecom-JP:
-    type: HTTP
+    type: http
     interval: 600
     path: ./AmyTelecom.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
@@ -240,7 +240,7 @@ proxy-providers:
       url: http://www.gstatic.com/generate_204
       interval: 600
   AmyTelecom-US:
-    type: HTTP
+    type: http
     interval: 600
     path: ./AmyTelecom.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
@@ -250,7 +250,7 @@ proxy-providers:
       url: http://www.gstatic.com/generate_204
       interval: 600
   AmyTelecom-TW:
-    type: HTTP
+    type: http
     interval: 600
     path: ./AmyTelecom.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
@@ -260,7 +260,7 @@ proxy-providers:
       url: http://www.gstatic.com/generate_204
       interval: 600
   AmyTelecom-SG:
-    type: HTTP
+    type: http
     interval: 600
     path: ./AmyTelecom.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
