--- a/stash.yaml
+++ b/stash.yaml
@@ -319,26 +319,31 @@ proxy-groups:
 #      default: DIRECT
 rule-providers:
   proxy-domain:
+    type: http
     behavior: domain # 使用 domain 类规则集，可以使匹配更高效
     url: https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt
     interval: 86400
 
   proxy-domain-text:
+    type: http
     behavior: domain-text # 推荐使用 text 格式
     url: https://cdn.jsdelivr.net/gh/Loyalsoldier/surge-rules@release/proxy.txt
     interval: 86400
 
   lan-cidr:
+    type: http
     behavior: ipcidr
     url: https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/lancidr.txt
     interval: 86400
 
   ip-cidr-text:
+    type: http
     behavior: ipcidr-text
     url: https://cdn.jsdelivr.net/gh/17mon/china_ip_list@master/china_ip_list.txt
     interval: 86400
 
   apple-direct:
+    type: http
     behavior: classical # 不推荐使用 classical 类规则集
     url: 'https://cdn.jsdelivr.net/gh/Hackl0us/SS-Rule-Snippet@master/Rulesets/Clash/Basic/Apple-direct.yaml'
     interval: 3600
