--- a/stash.yaml
+++ b/stash.yaml
@@ -29,7 +29,6 @@ hosts:
 # DNS 服务器配置
 dns:
   enable: true
-  listen: 127.0.0.1:8853
   # 以下填写的 DNS 服务器将会被用来解析 DNS 服务的域名
   # 仅填写 DNS 服务器的 IP 地址
   default-nameserver:
@@ -39,18 +38,19 @@ dns:
   # 所有 DNS 请求将会直接发送到服务器，不经过任何代理。
   # Stash 会使用最先获得的解析记录回复 DNS 请求
   nameserver:
+    - system # 使用 iOS 系统 DNS
     - https://dns.alidns.com/dns-query
     - https://dns.pub/dns-query
     - https://rubyfish.cn/dns-query
-    - system # 使用 iOS 系统 DNS
+
 
   # 跳过证书验证，解决部分兼容性问题 https://help.nextdns.io/t/g9hdkjz
   skip-cert-verify: true
 
   # 对部分域名使用单独的 DNS 服务器
   nameserver-policy:
-    'www.baidu.com': 114.114.114.114
-    '+.internal.crop.com': system
+    '+.gozap.com': 172.16.0.24
+    '+.chouti.com': 172.16.0.24
 
   ipv6: false
   enhanced-mode: fake-ip #redir-host or fake-ip
@@ -59,6 +59,9 @@ dns:
 
   # 在以下列表的域名将不会被解析为 fake ip，这些域名相关的解析请求将会返回它们真实的 IP 地址
   fake-ip-filter:
+    - "jms.gozap.com"
+    - "*.gozap.com"
+    - "*.chouti.com"
     - "*.lan"
     - stun.*.*.*
     - stun.*.*
@@ -335,4 +338,4 @@ rules:
   - RULE-SET,apple-direct,DIRECT
   - RULE-SET,lan-cidr,DIRECT
   - GEOIP,CN,DIRECT
-  - MATCH,Proxy
+  - MATCH,Final
