--- a/stash.yaml
+++ b/stash.yaml
@@ -38,17 +38,20 @@ dns:
   # 所有 DNS 请求将会直接发送到服务器，不经过任何代理。
   # Stash 会使用最先获得的解析记录回复 DNS 请求
   nameserver:
-    - 172.16.0.24 # 使用 iOS 系统 DNS
     - https://dns.alidns.com/dns-query
     - https://dns.pub/dns-query
     - https://rubyfish.cn/dns-query
+    - 172.16.0.24 # 自建dns
     - system # 使用 iOS 系统 DNS
 
 
   # 跳过证书验证，解决部分兼容性问题 https://help.nextdns.io/t/g9hdkjz
   skip-cert-verify: true
 
-
+  # 对部分域名使用单独的 DNS 服务器
+  #nameserver-policy:
+  #  '+.baidu.com': system
+  #  '+.163.com': 114.114.114.114
 
   ipv6: false
   enhanced-mode: fake-ip #redir-host or fake-ip
