--- a/stash.yaml
+++ b/stash.yaml
@@ -44,6 +44,7 @@ dns:
     - 172.16.0.24 # 自建dns
     - system # 使用 iOS 系统 DNS
 
+
   # 跳过证书验证，解决部分兼容性问题 https://help.nextdns.io/t/g9hdkjz
   skip-cert-verify: true
 
@@ -207,22 +208,13 @@ dns:
       - +.googleapis.com
       - +.gvt1.com
 
+
 proxy-providers:
   AmyTelecom-ALL:
     type: http
     interval: 600
     path: ./providers/AmyTelecom.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
-    health-check:
-      enable: true
-      url: http://www.gstatic.com/generate_204
-      interval: 600
-  AmyTelecom-HK:
-    type: http
-    interval: 600
-    path: ./providers/AmyTelecom.yaml
-    url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
-    filter: '香港'
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
@@ -237,42 +229,17 @@ proxy-providers:
       enable: true
       url: http://www.gstatic.com/generate_204
       interval: 600
-  mojie-ALL:
-    type: file
-    path: ./mojie.yaml
-    url: https://mojie.link/api/v1/client/subscribe?token=c12da864507d67f00aa9532f9eae159e
-    health-check:
-      enable: true
-      url: http://www.gstatic.com/generate_204
-      interval: 600
 
 proxy-groups:
   - name: "Proxy"
     type: select
     use:
       - AmyTelecom-ALL
-    proxies:
-      - mojie
 
-  - name: "Amy"
-    type: select
-    use:
-      - AmyTelecom-ALL
-
-  - name: "Amy-HK"
-    type: select
-    use:
-      - AmyTelecom-HK
-
-  - name: "Amy-US"
+  - name: "US"
     type: select
     use:
       - AmyTelecom-US
-
-  - name: "mojie"
-    type: select
-    use:
-      - mojie-ALL
 
   - name: "Apple"
     type: select
@@ -283,13 +250,13 @@ proxy-groups:
   - name: "Twitter"
     type: select
     proxies:
-      - Amy-US
+      - US
       - Proxy
 
   - name: "Paypal"
     type: select
     proxies:
-      - Amy-US
+      - US
       - Proxy
 
   - name: "Final"
