--- a/stash.yaml
+++ b/stash.yaml
@@ -213,7 +213,7 @@ proxy-providers:
   AmyTelecom-ALL:
     type: http
     interval: 600
-    path: ./providers/AmyTelecom.yaml
+    path: ./AmyTelecom_Clash.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
     health-check:
       enable: true
@@ -222,7 +222,7 @@ proxy-providers:
   AmyTelecom-US:
     type: http
     interval: 600
-    path: ./providers/AmyTelecom.yaml
+    path: ./AmyTelecom_Clash.yaml
     url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=uZO3yDq7Dsh
     filter: '美国'
     health-check:
