--- a/stash.yaml
+++ b/stash.yaml
@@ -214,7 +214,7 @@ proxy-providers:
     type: http
     interval: 600
     path: ./AmyTelecom_Clash.yaml
-    url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=eltga8wFOTk
+    url: https://api.nxtlnodes.com/Subscription/Clash?sid=22990&token=uZO3yDq7Dsh
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
