--- a/stash.yaml
+++ b/stash.yaml
@@ -212,15 +212,15 @@ dns:
 proxy-providers:
   AmyTelecom-ALL:
     type: file
-    interval: 600
     path: ./AmyTelecom_Clash.yaml
+    url:
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
       interval: 600
   AmyTelecom-US:
     type: file
-    interval: 600
+    url:
     path: ./AmyTelecom_Clash.yaml
     filter: '美国'
     health-check:
