--- a/stash.yaml
+++ b/stash.yaml
@@ -213,14 +213,14 @@ proxy-providers:
   AmyTelecom-ALL:
     type: file
     path: ./AmyTelecom_Clash.yaml
-    url:
+    url: ./AmyTelecom_Clash.yaml
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
       interval: 600
   AmyTelecom-US:
     type: file
-    url:
+    url: ./AmyTelecom_Clash.yaml
     path: ./AmyTelecom_Clash.yaml
     filter: '美国'
     health-check:
