--- a/clash.yaml
+++ b/clash.yaml
@@ -14582,41 +14582,41 @@ rules:
   - IP-CIDR,77.162.125.199/32,REJECT,no-resolve
   - IP-CIDR,185.165.169.108/32,REJECT,no-resolve
   - IP-CIDR,185.193.38.148/32,REJECT,no-resolve
-  - DOMAIN,alt1-mtalk.google.com,Mtalk
-  - DOMAIN,alt2-mtalk.google.com,Mtalk
-  - DOMAIN,alt3-mtalk.google.com,Mtalk
-  - DOMAIN,alt4-mtalk.google.com,Mtalk
-  - DOMAIN,alt5-mtalk.google.com,Mtalk
-  - DOMAIN,alt6-mtalk.google.com,Mtalk
-  - DOMAIN,alt7-mtalk.google.com,Mtalk
-  - DOMAIN,alt8-mtalk.google.com,Mtalk
-  - DOMAIN,mtalk.google.com,Mtalk
-  - IP-CIDR,64.233.177.188/32,Mtalk,no-resolve
-  - IP-CIDR,64.233.186.188/32,Mtalk,no-resolve
-  - IP-CIDR,64.233.187.188/32,Mtalk,no-resolve
-  - IP-CIDR,64.233.188.188/32,Mtalk,no-resolve
-  - IP-CIDR,64.233.189.188/32,Mtalk,no-resolve
-  - IP-CIDR,74.125.23.188/32,Mtalk,no-resolve
-  - IP-CIDR,74.125.24.188/32,Mtalk,no-resolve
-  - IP-CIDR,74.125.28.188/32,Mtalk,no-resolve
-  - IP-CIDR,74.125.127.188/32,Mtalk,no-resolve
-  - IP-CIDR,74.125.137.188/32,Mtalk,no-resolve
-  - IP-CIDR,74.125.203.188/32,Mtalk,no-resolve
-  - IP-CIDR,74.125.204.188/32,Mtalk,no-resolve
-  - IP-CIDR,74.125.206.188/32,Mtalk,no-resolve
-  - IP-CIDR,108.177.125.188/32,Mtalk,no-resolve
-  - IP-CIDR,142.250.4.188/32,Mtalk,no-resolve
-  - IP-CIDR,142.250.10.188/32,Mtalk,no-resolve
-  - IP-CIDR,142.250.31.188/32,Mtalk,no-resolve
-  - IP-CIDR,142.250.96.188/32,Mtalk,no-resolve
-  - IP-CIDR,172.217.194.188/32,Mtalk,no-resolve
-  - IP-CIDR,172.217.218.188/32,Mtalk,no-resolve
-  - IP-CIDR,172.217.219.188/32,Mtalk,no-resolve
-  - IP-CIDR,172.253.63.188/32,Mtalk,no-resolve
-  - IP-CIDR,172.253.122.188/32,Mtalk,no-resolve
-  - IP-CIDR,173.194.175.188/32,Mtalk,no-resolve
-  - IP-CIDR,173.194.218.188/32,Mtalk,no-resolve
-  - IP-CIDR,209.85.233.188/32,Mtalk,no-resolve
+  - DOMAIN,alt1-mtalk.google.com,Proxy
+  - DOMAIN,alt2-mtalk.google.com,Proxy
+  - DOMAIN,alt3-mtalk.google.com,Proxy
+  - DOMAIN,alt4-mtalk.google.com,Proxy
+  - DOMAIN,alt5-mtalk.google.com,Proxy
+  - DOMAIN,alt6-mtalk.google.com,Proxy
+  - DOMAIN,alt7-mtalk.google.com,Proxy
+  - DOMAIN,alt8-mtalk.google.com,Proxy
+  - DOMAIN,mtalk.google.com,Proxy
+  - IP-CIDR,64.233.177.188/32,Proxy,no-resolve
+  - IP-CIDR,64.233.186.188/32,Proxy,no-resolve
+  - IP-CIDR,64.233.187.188/32,Proxy,no-resolve
+  - IP-CIDR,64.233.188.188/32,Proxy,no-resolve
+  - IP-CIDR,64.233.189.188/32,Proxy,no-resolve
+  - IP-CIDR,74.125.23.188/32,Proxy,no-resolve
+  - IP-CIDR,74.125.24.188/32,Proxy,no-resolve
+  - IP-CIDR,74.125.28.188/32,Proxy,no-resolve
+  - IP-CIDR,74.125.127.188/32,Proxy,no-resolve
+  - IP-CIDR,74.125.137.188/32,Proxy,no-resolve
+  - IP-CIDR,74.125.203.188/32,Proxy,no-resolve
+  - IP-CIDR,74.125.204.188/32,Proxy,no-resolve
+  - IP-CIDR,74.125.206.188/32,Proxy,no-resolve
+  - IP-CIDR,108.177.125.188/32,Proxy,no-resolve
+  - IP-CIDR,142.250.4.188/32,Proxy,no-resolve
+  - IP-CIDR,142.250.10.188/32,Proxy,no-resolve
+  - IP-CIDR,142.250.31.188/32,Proxy,no-resolve
+  - IP-CIDR,142.250.96.188/32,Proxy,no-resolve
+  - IP-CIDR,172.217.194.188/32,Proxy,no-resolve
+  - IP-CIDR,172.217.218.188/32,Proxy,no-resolve
+  - IP-CIDR,172.217.219.188/32,Proxy,no-resolve
+  - IP-CIDR,172.253.63.188/32,Proxy,no-resolve
+  - IP-CIDR,172.253.122.188/32,Proxy,no-resolve
+  - IP-CIDR,173.194.175.188/32,Proxy,no-resolve
+  - IP-CIDR,173.194.218.188/32,Proxy,no-resolve
+  - IP-CIDR,209.85.233.188/32,Proxy,no-resolve
   - DOMAIN-SUFFIX,265.com,DIRECT
   - DOMAIN-SUFFIX,2mdn.net,DIRECT
   - DOMAIN-SUFFIX,alt1-mtalk.google.com,DIRECT
