--- a/proxy-ruleset.yaml
+++ b/proxy-ruleset.yaml
@@ -1,24 +1,24 @@
 payload:
-  - DOMAIN-SUFFIX,traefik.io,Proxy
-  - DOMAIN-SUFFIX,kubernetes.io,Proxy
-  - DOMAIN-SUFFIX,github.com,Proxy
-  - DOMAIN-SUFFIX,githubusercontent.com,Proxy
-  - DOMAIN-SUFFIX,git.huiyoujia.com,Proxy
-  - DOMAIN-SUFFIX,vipgame.io,Proxy
-  - DOMAIN-SUFFIX,ruanyifeng.com,Proxy
-  - DOMAIN-SUFFIX,amysecure.com,Proxy
-  - DOMAIN-SUFFIX,openvpn.net,Proxy
-  - DOMAIN-SUFFIX,daum.net,Proxy
-  - DOMAIN-SUFFIX,dropbox.com,Proxy
-  - DOMAIN-SUFFIX,v2ex.com,Proxy
-  - DOMAIN-SUFFIX,dropboxstatic.com,Proxy
-  - DOMAIN-SUFFIX,dropboxapi.com,Proxy
-  - DOMAIN-SUFFIX,pstmn.io,Proxy
-  - DOMAIN-SUFFIX,postman.com,Proxy
-  - DOMAIN-SUFFIX,redisson.org,Proxy
-  - DOMAIN-SUFFIX,g.co,Proxy
-  - DOMAIN-SUFFIX,jsfiddle.net,Proxy
-  - DOMAIN-SUFFIX,fiddle.jshell.net,Proxy
-  - DOMAIN-SUFFIX,netsarang.com,Proxy
-  - DOMAIN-SUFFIX,appcenter.ms,Proxy
-  - IP-CIDR,103.121.165.0/24,Proxy
+  - DOMAIN-SUFFIX,traefik.io
+  - DOMAIN-SUFFIX,kubernetes.io
+  - DOMAIN-SUFFIX,github.com
+  - DOMAIN-SUFFIX,githubusercontent.com
+  - DOMAIN-SUFFIX,git.huiyoujia.com
+  - DOMAIN-SUFFIX,vipgame.io
+  - DOMAIN-SUFFIX,ruanyifeng.com
+  - DOMAIN-SUFFIX,amysecure.com
+  - DOMAIN-SUFFIX,openvpn.net
+  - DOMAIN-SUFFIX,daum.net
+  - DOMAIN-SUFFIX,dropbox.com
+  - DOMAIN-SUFFIX,v2ex.com
+  - DOMAIN-SUFFIX,dropboxstatic.com
+  - DOMAIN-SUFFIX,dropboxapi.com
+  - DOMAIN-SUFFIX,pstmn.io
+  - DOMAIN-SUFFIX,postman.com
+  - DOMAIN-SUFFIX,redisson.org
+  - DOMAIN-SUFFIX,g.co
+  - DOMAIN-SUFFIX,jsfiddle.net
+  - DOMAIN-SUFFIX,fiddle.jshell.net
+  - DOMAIN-SUFFIX,netsarang.com
+  - DOMAIN-SUFFIX,appcenter.ms
+  - IP-CIDR,103.121.165.0/24
