--- a/ClashX.yaml
+++ b/ClashX.yaml
@@ -246,6 +246,25 @@ dns:
     - https://dns.rubyfish.cn/dns-query
     - https://public.dns.iij.jp/dns-query
     - tls://8.8.4.4
+ 
+rule-providers:
+	custom-proxy:
+		type: http
+		behavior: classical
+		path: ./proxy-ruleset.yaml
+		url: https://raw.githubusercontent.com/weijinsun/ruleset/main/proxy-ruleset.yaml
+		interval: 3600
+
+rule-providers:
+	custom-direct:
+		type: http
+		behavior: classical
+		path: ./proxy-ruleset.yaml
+		url: https://raw.githubusercontent.com/weijinsun/ruleset/main/direct-ruleset.yaml
+		interval: 3600
+
+RULE-SET,custom-proxy,Proxy
+RULE-SET,custom-direct,DIRECT
 
 rules:
   - DOMAIN-SUFFIX,acl4.ssr,DIRECT
