--- a/Stash.yaml
+++ b/Stash.yaml
@@ -242,7 +242,24 @@ dns:
     - https://public.dns.iij.jp/dns-query
     - tls://8.8.4.4
 
+rule-providers:
+  custom-proxy:
+    type: http
+    behavior: classical
+    path: ./proxy-ruleset.yaml
+    url: https://raw.githubusercontent.com/weijinsun/ruleset/main/proxy-ruleset.yaml
+    interval: 3600
+
+  custom-direct:
+    type: http
+    behavior: classical
+    path: ./direct-ruleset.yaml
+    url: https://raw.githubusercontent.com/weijinsun/ruleset/main/direct-ruleset.yaml
+    interval: 3600
+
 rules:
+  - RULE-SET,custom-proxy,Proxy
+  - RULE-SET,custom-direct,DIRECT
   - DOMAIN-SUFFIX,acl4.ssr,DIRECT
   - DOMAIN-SUFFIX,ip6-localhost,DIRECT
   - DOMAIN-SUFFIX,ip6-loopback,DIRECT
