--- a/ClashX.yaml
+++ b/ClashX.yaml
@@ -253,14 +253,14 @@ rule-providers:
   custom-proxy:
     type: http
     behavior: classical
-    path: ./proxy-ruleset.yaml
+    path: ./ruleset/proxy-ruleset.yaml
     url: https://raw.githubusercontent.com/weijinsun/ruleset/main/proxy-ruleset.yaml
     interval: 3600
 
   custom-direct:
     type: http
     behavior: classical
-    path: ./direct-ruleset.yaml
+    path: ./ruleset/direct-ruleset.yaml
     url: https://raw.githubusercontent.com/weijinsun/ruleset/main/direct-ruleset.yaml
     interval: 3600
 
