--- a/proxy-ruleset.yaml
+++ b/proxy-ruleset.yaml
@@ -21,3 +21,4 @@ payload:
   - DOMAIN-SUFFIX,fiddle.jshell.net
   - DOMAIN-SUFFIX,netsarang.com
   - DOMAIN-SUFFIX,appcenter.ms
+  - DOMAIN-SUFFIX,stash.wiki
