--- a/ClashX.yaml
+++ b/ClashX.yaml
@@ -246,7 +246,7 @@ dns:
     - https://dns.rubyfish.cn/dns-query
     - https://public.dns.iij.jp/dns-query
     - tls://8.8.4.4
- 
+
 
 
 rule-providers:
@@ -4532,7 +4532,7 @@ rules:
   - DOMAIN-SUFFIX,gigporno.ru,Proxy
   - DOMAIN-SUFFIX,girlbanker.com,Proxy
   - DOMAIN-SUFFIX,git.io,Proxy
-  - DOMAIN-SUFFIX,gitbooks.io,Proxy
+  - DOMAIN-SUFFIX,gitbook.io,Proxy
   - DOMAIN-SUFFIX,githack.com,Proxy
   - DOMAIN-SUFFIX,github.blog,Proxy
   - DOMAIN-SUFFIX,github.com,Proxy
