--- a/proxy-ruleset.yaml
+++ b/proxy-ruleset.yaml
@@ -25,4 +25,5 @@ payload:
   - DOMAIN-SUFFIX,stash.wiki
   - DOMAIN-SUFFIX,mojie.me
   - DOMAIN-SUFFIX,mojie.online
-  
+  - DOMAIN-SUFFIX,wpxz.org
+
