--- a/Stash.yaml
+++ b/Stash.yaml
@@ -19,8 +19,12 @@ proxy-groups:
   - name: "Proxy"
     type: select
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
-    use:
-      - Amy-All
+    proxies:
+      - HK
+      - SG
+      - JP
+      - US
+      - TW
 
   - name: "HK"
     type: select
@@ -31,8 +35,29 @@ proxy-groups:
 
   - name: "US"
     type: select
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
     filter: '美国'
+    use:
+      - Amy-All
+
+  - name: "SG"
+    type: select
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
+    filter: '新加坡'
+    use:
+      - Amy-All
+
+  - name: "JP"
+    type: select
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
+    filter: '日本'
+    use:
+      - Amy-All
+
+  - name: "TW"
+    type: select
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
+    filter: '台湾'
     use:
       - Amy-All
 
