--- a/Stash.yaml
+++ b/Stash.yaml
@@ -10,6 +10,7 @@ proxy-providers:
   Amy-All:
     type: file
     path: ./Amy.yaml
+    url: ''
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
